# inferencing-maven-assignments

./: .gitignore  Makefile  README.md  config.yaml  pyproject.toml  test.sh
assignments/assignment_1/: README.md  app.py  gateway_logic.py  mock_backend.py  models.py  test.sh
assignments/assignment_1/context/: 2_plan_objectives_1_3.md  3_plan_objective_4.md
context/: context_for_agent.md
context/assignment_1/: 1_task.md  2_plan_objectives_1_3.md  3_plan_objective_4.md
context/assignment_2/: 1_task.md  2_plan_must_haves.md  3_optional.md
src/: README.md  app.py  backend_registry.py  backends.py  config.py  config_loader.py  gateway_logic.py  models.py  test.sh
src/adapters/: backend_registry.py  backends.py
src/context/assignment_1/: 2_plan_objectives_1_3.md
src/core/: __init__.py  config.py  logger.py  models.py
src/dev/: __init__.py  mock_backend.py
src/services/: gateway.py
